--- a/index.html
+++ b/index.html
@@ -277,7 +277,7 @@
                 <div id="posts-carousel" class="owl-carousel">
                     <div class="blog block carousel-post">
                         
-                        <h3>eLearning web portal</h3>
+                        <h3>Elearning web portal for a college/university</h3>
                         <p>
                             This application is developed to enable the students of a college/university to study their academic lectures at anytime and anywhere. This enhances students participation in other activities.
                             <br/><br/><b>Technology stack: HTML5, CSS3, PHP5, BOOTSTRAP, MySQL</b>
@@ -286,9 +286,9 @@
                     </div><!-- / carousel-post -->
 
                     <div class="blog block carousel-post">
-                        <h3>Placement cell web portal</h3>
+                        <h3>Placement cell web portal of a college/university</h3>
                         <p>This web application is designed to the placement cell of a college/university to enable the all activities done through this like student registration, preparation etc.,
-                            <br/><br/><b>Technology stack:  HTML5, CSS3, PHP5, BOOTSTRAP, MySQL)</b>
+                            <br/><br/><b>Technology stack:  HTML5, CSS3, PHP5, BOOTSTRAP, MySQL</b>
                         </p>
                     
                     </div><!-- / carousel-post -->
